--- a/frontend/src/components/BookConsultation/BookConsultation.css
+++ b/frontend/src/components/BookConsultation/BookConsultation.css
@@ -105,7 +105,7 @@
     color: black;
 }
 
-.highlight {
+.consultation-container .highlight {
     background-color: #ACF96D;
     color: black;
     text-align: center;
