--- a/frontend/src/components/ProjectsDones/ProjectsDone.css
+++ b/frontend/src/components/ProjectsDones/ProjectsDone.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 80px 12px;
+  padding: 120px 12px 80px 12px;
   /* Adjust padding as needed */
   background-color: #FFFFFF;
 }
