--- a/frontend/src/components/FooterNew/footerHero.css
+++ b/frontend/src/components/FooterNew/footerHero.css
@@ -18,18 +18,15 @@
 
 .footer .footer-second-section {
   display: block;
-  /* grid-template-columns: repeat(2, 1fr); */
   gap: 10px;
   list-style: none;
   padding: 0px 30px;
   line-height: 2.5;
-
 }
 
 .footer .footer-second-section ul li a {
   color: #9F9F9F;
   text-decoration: none;
-  /* text-align: center; */
 }
 
 .footer .footer-second-section ul li a:hover {
@@ -213,7 +210,7 @@ ul li a:hover {
 }
 
 /* Media Queries for Responsive Design */
-@media (max-width: 1600px) {
+@media (max-width: 1280px) {
 
   .footer-section .logo,
   .footer-section .footer-text,
@@ -269,59 +266,15 @@ ul li a:hover {
   .footer .contact-icon {
     width: 45px;
   }
+
+  .footer-sect ul {
+    display: column;
+    gap: 10px;
+    list-style: none;
+    padding: 0px 30px;
+    line-height: 2.5;
+  }
 }
-
-/* @media (max-width: 1200px) {
-  .footer-section .logo,
-  .footer-section .footer-text,
-  .specific-paragraph,
-  .footer .footer-heading,
-  ul,
-  .footer .social-icons,
-  .footer .blog-subfooter {
-    margin-left: 0rem;
-    margin-right: 0rem;
-  }
-  .footer .footer-sect ul li a{
-    font-size: 14px;
-  }
-  .footer .footer-second-section ul li a{
-    font-size: 14px;
-  }
-
-  .footer .footer-text{
-    font-size: 13px;
-  }
-  .footer .head-h1{
-    font-size: 15px;
-  }
-  .footer .specific-paragraph{
-    font-size: 14px;
-  }
-  .footer .contact-icon{
-    width: 42px;
-  }
-
-  .footer-sect {
-    margin: 0 28px;
-    flex: none;
-  }
-
-  .footer .ul-segment-second{
-    margin-right: 0px;
-  }
-
-  .footer .social-icons {
-    display: flex;
-    margin-top: 20px;
-    justify-content: flex-start;
-    padding-left: 0rem;
-    padding-bottom: 80px;
-  }
-  .footer .footer-section-right{
-    
-  }
-} */
 
 @media (max-width: 992px) {
   .footer {
