--- a/frontend/src/components/OurTestimonials/ConnectPopup.css
+++ b/frontend/src/components/OurTestimonials/ConnectPopup.css
@@ -116,13 +116,17 @@
     width: 250px;
 }
 
-@media(max-width:800px) {
+@media(max-width: 1280px) {
     .Testimonials-container {
         width: 100%;
     }
 
     .Testimonials-container .profile-info .review-text {
         width: 100%;
+    }
+
+    .Testimonials-container .head-h1 {
+        padding: 0vh 1vh;
     }
 }
 
@@ -147,4 +151,5 @@
         width: 100%;
         font-size: 12px;
     }
+
 }
