--- a/frontend/src/components/OurServices/CardBoxServicesSection.css
+++ b/frontend/src/components/OurServices/CardBoxServicesSection.css
@@ -1,7 +1,7 @@
 /* Overall blog section */
 .blog-section {
     text-align: center;
-    padding: 12vh 0;
+    padding: 2vh 0;
     background-color: #121212;
     color: #ffffff;
 }
@@ -21,7 +21,6 @@
     color: #b0b0b0;
 }
 
-/* Blog List */
 .blog-section .blog-list {
     display: flex;
     flex-wrap: wrap;
@@ -80,9 +79,21 @@
 
 /* Media Queries */
 
-@media (max-width: 1600px) {
+@media (max-width: 1280px) {
     .blog-section .blog-item {
-        width: 100%;
+        display: flex;
+        background-color: #1f1f1f;
+        border-radius: 15px;
+        overflow: hidden;
+        width: 45%;
+        padding: 32px 20px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+    }
+
+    .blog-section .head-h1 {
+        font: normal normal bold 80px/89px Open Sans;
+        padding: 0vh 10vh;
     }
 }
 
@@ -97,7 +108,6 @@
         flex-direction: column;
         align-items: center;
         padding: 20px;
-        /* Adjust padding as needed */
     }
 
     .blog-section .blog-image {
