Work In Progress

--- a/frontend/src/components/VisionAndMission/VisionAndMission.css
+++ b/frontend/src/components/VisionAndMission/VisionAndMission.css
@@ -95,9 +95,9 @@
 }
 
 .ourservices-container .connect-button {
-
+  padding: 8.8px 64px;
   text-decoration: none;
- 
+
 }
 
 .ourservices-container .bluepara {
