--- a/frontend/src/components/BlogsHeroComponent/BlogsHero.css
+++ b/frontend/src/components/BlogsHeroComponent/BlogsHero.css
@@ -4,20 +4,20 @@
     background-color: #131313;
 }
 
-.Homehero-content {
+.Bloghero-content {
     padding: 30vh 0vh 20vh;
 }
 
-.Homehero-content .head-h1 {
+.Bloghero-content .head-h1 {
     font: normal normal bold 75px/89px Open Sans;
     padding: 0px 20px 0px 00px;
 }
 
-.Homehero-content .para_main {
+.Bloghero-content .para_main {
     margin-bottom: 14px;
 }
 
-.Homehero-content .connect-button {
+.Bloghero-content .connect-button {
     margin-top: 12px;
 }
 
@@ -51,7 +51,7 @@
     color: #ACF96D;
 }
 
-.Homehero-content .main-head {
+.Bloghero-content .main-head {
     color: #717C93;
 }
 
@@ -171,25 +171,25 @@
         height: auto;
     }
 
-    .Homehero-content .head-h1 {
+    .Bloghero-content .head-h1 {
         font-size: 2.5em;
 
     }
 
-    .blogs-hero .Homehero-content {
+    .blogs-hero .Bloghero-content {
         padding: 2vh 0vh 2vh 0vh;
     }
 
-    .Homehero-content .para_main {
+    .Bloghero-content .para_main {
         width: 100%;
 
     }
 
-    .Homehero-content .head-h1 {
+    .Bloghero-content .head-h1 {
         font-size: 3em;
     }
 
-    .Homehero-content .para_main {
+    .Bloghero-content .para_main {
         width: 100%;
     }
 
@@ -221,17 +221,17 @@
 
     }
 
-    .blogs-hero .Homehero-content {
+    .blogs-hero .Bloghero-content {
         padding: 2vh 0vh 2vh 0vh;
     }
 
-    .Homehero-content .head-h1 {
+    .Bloghero-content .head-h1 {
         font-size: 2.5em;
         text-align: center;
         padding: 0px;
     }
 
-    .Homehero-content .para_main {
+    .Bloghero-content .para_main {
         width: 100%;
         text-align: center;
     }
@@ -263,18 +263,18 @@
         height: auto;
     }
 
-    .Homehero-content {
+    .Bloghero-content {
         text-align: center;
         margin-bottom: 20px;
         padding: 0vh;
     }
 
-    .Homehero-content .head-h1 {
+    .Bloghero-content .head-h1 {
         font-size: 3em;
         padding: 0px;
     }
 
-    .Homehero-content .para_main {
+    .Bloghero-content .para_main {
         font-size: 1em;
         width: 100%;
     }
@@ -283,7 +283,7 @@
         gap: 10px;
     }
 
-    .Homehero-content .connect-button {
+    .Bloghero-content .connect-button {
         padding: 4px 22px;
         font-size: 12px;
         width: 132px;
@@ -337,13 +337,13 @@
 
 /* Extra small screens */
 @media (max-width: 480px) {
-    .Homehero-content .head-h1 {
+    .Bloghero-content .head-h1 {
         font-size: 3em;
         line-height: 1.2;
         padding: 0px;
     }
 
-    .Homehero-content .para_main {
+    .Bloghero-content .para_main {
         font-size: 0.9em;
         width: 100%;
     }
