--- a/frontend/src/components/HomeHero/HomeHero.css
+++ b/frontend/src/components/HomeHero/HomeHero.css
@@ -127,18 +127,18 @@
     transform: translateY(-18px);
 }
 
-@media (max-width: 1600px) {
+@media (max-width: 1280px) {
     .home-hero {
-        height: auto;
+        height: 100vh;
     }
 
     .Homehero-content .head-h1 {
-        font-size: 2.5em;
-
+        font: normal normal bold 58px/60px Open Sans;
+        padding: 0px 20px 0px 00px;
     }
 
     .home-hero .Homehero-content {
-        padding: 2vh 0vh 2vh 0vh;
+        padding: 15vh 0vh 2vh 0vh;
     }
 
     .Homehero-content .para_main {
@@ -147,7 +147,7 @@
     }
 
     .Homehero-content .head-h1 {
-        font-size: 3em;
+        /* font-size: 3em; */
     }
 
     .Homehero-content .para_main {
@@ -157,10 +157,10 @@
     .home-hero .social-media-icons {}
 
     .home-hero .banner-img {
-        width: 88%;
+        width: 50%;
         margin: 0 auto;
-        transform: translateY(-50px);
-        padding: 2vh 0vh;
+        transform: translateY(-0px);
+        padding: 12vh 0vh 0vh 0vh
     }
 
     .home-hero .button-text-container {
