--- a/frontend/src/components/OurServices/CardBoxServicesSection.css
+++ b/frontend/src/components/OurServices/CardBoxServicesSection.css
@@ -52,7 +52,7 @@
 }
 
 .blog-section .blog-content {
-    padding: 25px 35px;
+    padding: 0px 5px 0px 15px;
     width: 60%;
     display: flex;
     flex-direction: column;
