--- a/frontend/src/components/ContactUsPage/ContactPage.css
+++ b/frontend/src/components/ContactUsPage/ContactPage.css
@@ -159,6 +159,22 @@
     padding: 8px 50px;
 }
 
+@media (max-width: 1280px) {
+    .contact-wrapper .contact-body {
+        display: flex;
+        /* justify-content: space-between; */
+        flex-wrap: nowrap;
+    }
+
+    .contact-wrapper .contact-details .contact-item {
+        background-color: #222;
+        padding: 37px 40px;
+        width: 400px;
+        border-radius: 30px;
+        margin-bottom: 20px;
+    }
+}
+
 /* For tablets (768px and below) */
 @media (max-width: 768px) {
     .contact-wrapper {
